testdata/baselines/reference/submodule/compiler/errorInfoForRelatedIndexTypesNoConstraintElaboration.errors.txt
errorInfoForRelatedIndexTypesNoConstraintElaboration.ts(3,26): error TS2503: Cannot find namespace 'JSX'.
errorInfoForRelatedIndexTypesNoConstraintElaboration.ts(3,66): error TS2503: Cannot find namespace 'JSX'.
errorInfoForRelatedIndexTypesNoConstraintElaboration.ts(5,17): error TS2503: Cannot find namespace 'JSX'.
errorInfoForRelatedIndexTypesNoConstraintElaboration.ts(6,19): error TS2503: Cannot find namespace 'JSX'.


==== errorInfoForRelatedIndexTypesNoConstraintElaboration.ts (4 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    class I<T1 extends keyof JSX.IntrinsicElements, T2 extends keyof JSX.IntrinsicElements> {
                             ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
                                                                     ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
        M() {
            let c1: JSX.IntrinsicElements[T1] = {};
                    ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
            const c2: JSX.IntrinsicElements[T2] = c1;
                      ~~~
!!! error TS2503: Cannot find namespace 'JSX'.
        }
    }